# scarbakou

./: .gitignore  README.md
Lab1/: algorithm.md
Lab1/algo/: Algo.md
Lab1/algo/code/: 0.gwf  1.gwf  10.gwf  2.gwf  3.gwf  4.gwf  5.gwf  6.gwf  7.gwf  8.gwf  9.gwf
Lab1/src/: CMakeLists.txt  main.cpp  matrices.h
Lab1/test-generator/: CMakeLists.txt  example.h  main.cpp
Lab1/tests/: input-1.txt  input-10.txt  input-11.txt  input-12.txt  input-13.txt  input-14.txt  input-15.txt  input-16.txt  input-17.txt  input-18.txt  input-19.txt  input-2.txt  input-20.txt  input-21.txt  input-22.txt  input-23.txt  input-24.txt  input-25.txt  input-26.txt  input-27.txt  input-28.txt  input-3.txt  input-30.txt  input-31.txt  input-32.txt  input-33.txt  input-34.txt  input-35.txt  input-36.txt  input-37.txt  input-38.txt  input-39.txt  input-4.txt  input-40.txt  input-41.txt  input-42.txt  input-43.txt  input-44.txt  input-45.txt  input-46.txt  (+9 more)
Lab1/tests/3-nodes/: in-1.txt  in-11.txt  in-13.txt  in-16.txt  in-17.txt  in-18.txt  in-19.txt  in-2.txt  in-21.txt  in-22.txt  in-24.txt  in-25.txt  in-26.txt  in-27.txt  in-28.txt  in-3.txt  in-30.txt  in-4.txt  in-5.txt  in-6.txt  in-7.txt  in-8.txt  in-9.txt
Lab1/tests/4-nodes/: in-1.txt  in-10.txt  in-11.txt  in-12.txt  in-13.txt  in-14.txt  in-15.txt  in-16.txt  in-17.txt  in-18.txt  in-19.txt  in-2.txt  in-20.txt  in-21.txt  in-22.txt  in-23.txt  in-24.txt  in-25.txt  in-26.txt  in-27.txt  in-28.txt  in-29.txt  in-3.txt  in-30.txt  in-4.txt  in-5.txt  in-6.txt  (+3 more)
Lab2/: CMakeLists.txt  customarray.cpp  customarray.h  main.cpp
(+32 files in other folders)
